# Corrsounder_3_9_5

./: CMakeLists.txt  MANIFEST.md  README.md
apps/: CMakeLists.txt
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  corrsounder_error_correction_cc.block.yml  corrsounder_ir_snr.block.yml  corrsounder_moving_average_vcc.block.yml  corrsounder_ramdisk_file_sink_vc.block.yml  corrsounder_seq_correlator_cc.block.yml  corrsounder_seq_gate_cc.block.yml  corrsounder_seq_source_c.block.yml
include/corrsounder/: CMakeLists.txt  api.h  sequence_gate_cc.h
lib/: CMakeLists.txt  qa_test2.cc
python/bindings/: failed_conversions.txt  sequence_gate_cc_python.cc
python/bindings/docstrings/: sequence_gate_cc_pydoc_template.h
